--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "vite": "^6.3.1"
     },
     "dependencies": {
+        "mathgenerator": "^1.4.0",
         "phaser": "^3.90.0"
     }
 }
